--- a/dashboard.html
+++ b/dashboard.html
@@ -1250,22 +1250,24 @@
                     const [homeScoreHT, awayScoreHT] = game.scores?.["1"] ? [parseInt(game.scores["1"].home) || 0, parseInt(game.scores["1"].away) || 0] : [0, 0];
                     const totalGoalsHT = homeScoreHT + awayScoreHT;
                     const totalGoalsFT = homeScore + awayScore;
-                    if (!leagueStats[leagueName][homePlayer]) leagueStats[leagueName][homePlayer] = { games: 0, goalsScoredHT: 0, goalsConcededHT: 0, over15HtCount: 0, goalsScoredFT: 0, goalsConcededFT: 0, over25FtCount: 0 };
+                    if (!leagueStats[leagueName][homePlayer]) leagueStats[leagueName][homePlayer] = { games: 0, wins: 0, goalsScoredHT: 0, goalsConcededHT: 0, over15HtCount: 0, goalsScoredFT: 0, goalsConcededFT: 0, over25FtCount: 0 };
                     leagueStats[leagueName][homePlayer].games++;
                     leagueStats[leagueName][homePlayer].goalsScoredHT += homeScoreHT;
                     leagueStats[leagueName][homePlayer].goalsConcededHT += awayScoreHT;
                     if (totalGoalsHT > 1.5) leagueStats[leagueName][homePlayer].over15HtCount++;
                     leagueStats[leagueName][homePlayer].goalsScoredFT += homeScore;
                     leagueStats[leagueName][homePlayer].goalsConcededFT += awayScore;
+                    if (homeScore > awayScore) leagueStats[leagueName][homePlayer].wins++;
                     if (totalGoalsFT > 2.5) leagueStats[leagueName][homePlayer].over25FtCount++;
                     if (totalGoalsHT > 1.5) leagueStats[leagueName][homePlayer].over15HtCount++;
-                    if (!leagueStats[leagueName][awayPlayer]) leagueStats[leagueName][awayPlayer] = { games: 0, goalsScoredHT: 0, goalsConcededHT: 0, over15HtCount: 0, goalsScoredFT: 0, goalsConcededFT: 0, over25FtCount: 0 };
+                    if (!leagueStats[leagueName][awayPlayer]) leagueStats[leagueName][awayPlayer] = { games: 0, wins: 0, goalsScoredHT: 0, goalsConcededHT: 0, over15HtCount: 0, goalsScoredFT: 0, goalsConcededFT: 0, over25FtCount: 0 };
                     leagueStats[leagueName][awayPlayer].games++;
                     leagueStats[leagueName][awayPlayer].goalsScoredHT += awayScoreHT;
                     leagueStats[leagueName][awayPlayer].goalsConcededHT += homeScoreHT;
                     if (totalGoalsHT > 1.5) leagueStats[leagueName][awayPlayer].over15HtCount++;
                     leagueStats[leagueName][awayPlayer].goalsScoredFT += awayScore;
                     leagueStats[leagueName][awayPlayer].goalsConcededFT += homeScore;
+                    if (awayScore > homeScore) leagueStats[leagueName][awayPlayer].wins++;
                     if (totalGoalsFT > 2.5) leagueStats[leagueName][awayPlayer].over25FtCount++;
                 });
                 Object.keys(leagueStats).forEach(leagueName => {
@@ -1278,8 +1280,11 @@
                             const avgGoalsConcededHT = (stats.goalsConcededHT / stats.games).toFixed(2);
                             const avgOver25Ft = Math.min((stats.over25FtCount / stats.games * 100), 100).toFixed(1);
                             const avgGoalsConcededFT = (stats.goalsConcededFT / stats.games).toFixed(2);
-                            const score = (0.3 * (parseFloat(avgOver15Ht) / 100) + 0.2 * (1 - (parseFloat(avgGoalsConcededHT) / 5)) + 0.3 * (parseFloat(avgOver25Ft) / 100) + 0.2 * (1 - (parseFloat(avgGoalsConcededFT) / 5))) * 100;
-                            playerData.push({ name: playerName, avgOver15Ht: parseFloat(avgOver15Ht), avgGoalsConcededHT: parseFloat(avgGoalsConcededHT), avgOver25Ft: parseFloat(avgOver25Ft), avgGoalsConcededFT: parseFloat(avgGoalsConcededFT), score });
+                            const winRate = (stats.wins / stats.games * 100).toFixed(1);
+                            const avgGoalsScoredHT = (stats.goalsScoredHT / stats.games).toFixed(2);
+                            const avgGoalsScoredFT = (stats.goalsScoredFT / stats.games).toFixed(2);
+                            const score = (0.3 * (stats.wins / stats.games) + 0.2 * (parseFloat(avgGoalsScoredHT) / 3) + 0.2 * (1 - (parseFloat(avgGoalsConcededHT) / 3)) + 0.15 * (parseFloat(avgGoalsScoredFT) / 3) + 0.15 * (1 - (parseFloat(avgGoalsConcededFT) / 3))) * 100;
+                            playerData.push({ name: playerName, winRate: parseFloat(winRate), avgGoalsScoredHT: parseFloat(avgGoalsScoredHT), avgGoalsConcededHT: parseFloat(avgGoalsConcededHT), avgGoalsScoredFT: parseFloat(avgGoalsScoredFT), avgGoalsConcededFT: parseFloat(avgGoalsConcededFT), score });
                         }
                     });
                     if (playerData.length > 0) {
@@ -1304,20 +1309,24 @@
                                 </div>
                                 <div class="best-player-stats">
                                     <div class="stat-item">
-                                        <span class="stat-value">${player.avgOver15Ht}%</span>
-                                        <span class="stat-label">Over 1.5 HT</span>
+                                        <span class="stat-value">${player.winRate}%</span>
+                                        <span class="stat-label">Vitórias</span>
+                                    </div>
+                                    <div class="stat-item">
+                                        <span class="stat-value">${player.avgGoalsScoredHT}</span>
+                                        <span class="stat-label">Gols HT</span>
                                     </div>
                                     <div class="stat-item">
                                         <span class="stat-value">${player.avgGoalsConcededHT}</span>
-                                        <span class="stat-label">Gols Sof. HT</span>
+                                        <span class="stat-label">Sof. HT</span>
                                     </div>
                                     <div class="stat-item">
-                                        <span class="stat-value">${player.avgOver25Ft}%</span>
-                                        <span class="stat-label">Over 2.5 FT</span>
+                                        <span class="stat-value">${player.avgGoalsScoredFT}</span>
+                                        <span class="stat-label">Gols FT</span>
                                     </div>
                                     <div class="stat-item">
                                         <span class="stat-value">${player.avgGoalsConcededFT}</span>
-                                        <span class="stat-label">Gols Sof. FT</span>
+                                        <span class="stat-label">Sof. FT</span>
                                     </div>
                                 </div>
                             `;
